--- a/apps/app/src/index.html
+++ b/apps/app/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>app</title>
+        <title>Nosework</title>
         <base href="/" />
         <meta
             content="width=device-width, initial-scale=1"
