chore: add web manifest

--- a/apps/app/src/index.html
+++ b/apps/app/src/index.html
@@ -13,6 +13,7 @@
             rel="icon"
             type="image/x-icon"
         />
+        <link rel="manifest" href="manifest.webmanifest">
     </head>
     <body>
         <nw-root></nw-root>
