feat: add theme

--- a/apps/app/src/index.html
+++ b/apps/app/src/index.html
@@ -1,21 +1,22 @@
 <!doctype html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title>Nosework</title>
-        <base href="/" />
-        <meta
-            content="width=device-width, initial-scale=1"
-            name="viewport"
-        />
-        <link
-            href="favicon.ico"
-            rel="icon"
-            type="image/x-icon"
-        />
-        <link rel="manifest" href="manifest.webmanifest">
-    </head>
-    <body>
-        <nw-root></nw-root>
-    </body>
+<html lang='en'>
+<head>
+  <meta charset='utf-8' />
+  <title>Nosework</title>
+  <base href='/' />
+  <meta
+    content='width=device-width, initial-scale=1'
+    name='viewport'
+  />
+  <link
+    href='favicon.ico'
+    rel='icon'
+    type='image/x-icon'
+  />
+  <link rel='manifest' href='manifest.webmanifest'>
+  <meta id="themeColor" name="theme-color" content="#ffffff" />
+</head>
+<body>
+<nw-root></nw-root>
+</body>
 </html>
